// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots z|c2c/RequestDetailInfoView Request Detail C2C 1`] = `
Array [
  <Text
    style={
      Object {
        "display": "none",
      }
    }
    testID="storyConfigId"
  >
    {"isCaptureScrollViewContent":true}
  </Text>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="captureButton"
  >
    <Text>
      Capture
    </Text>
    <Text
      style={
        Object {
          "display": "none",
        }
      }
      testID="captureURL"
    />
  </View>,
  <RCTScrollView
    testID="captureScrollView"
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        <RCTScrollView
          alwaysBounceVertical={false}
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            Array [
              Object {
                "flexGrow": 1,
              },
              Array [
                Object {
                  "flexGrow": 1,
                  "paddingHorizontal": 16,
                },
                Object {},
              ],
            ]
          }
          contentInset={
            Object {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={true}
          enableResetScrollToCoords={false}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          horizontal={false}
          innerRef={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="handled"
          keyboardSpace={0}
          onScroll={[Function]}
          pointerEvents="auto"
          resetKeyboardSpace={[Function]}
          scrollEnabled={true}
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Mã yêu cầu:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                CT-101
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Trạng thái:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {
                      "color": "#333333",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Chuyên viên tư vấn:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                TPL Kim-Consultant-Lead
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 4,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Chuyên viên tư vấn:
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/call/call.png",
                    }
                  }
                  style={
                    Object {
                      "height": 21,
                      "marginRight": 8,
                      "tintColor": "#26894F",
                      "width": 21,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#26894F",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 12,
                      "includeFontPadding": true,
                    }
                  }
                >
                  Gọi điện
                </Text>
              </View>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "marginLeft": 16,
                    "opacity": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/message_fill.png",
                    }
                  }
                  style={
                    Object {
                      "height": 21,
                      "marginRight": 8,
                      "tintColor": "#26894F",
                      "width": 21,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#26894F",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 12,
                      "includeFontPadding": true,
                    }
                  }
                >
                  Nhắn tin
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Ngày cập nhật:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                20/04/2021 13:53
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
            <Text
              style={
                Object {
                  "fontFamily": "Nunito-Bold",
                  "fontSize": 18,
                  "includeFontPadding": true,
                }
              }
            >
              Chi tiết yêu cầu liên hệ
            </Text>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Mã BĐS quan tâm:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {},
                  ]
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#313131",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 14,
                          "includeFontPadding": true,
                        },
                        Object {
                          "color": "#26894F",
                          "flex": 1,
                          "fontFamily": "Nunito-Bold",
                          "includeFontPadding": true,
                        },
                      ]
                    }
                  >
                    MTD76
                  </Text>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../src/assets/images/right_arrow.png",
                        }
                      }
                      style={
                        Object {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Loại giao dịch:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Mua
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Loại hình BĐS:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Biệt thự
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Dự án:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Richmond City
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Khu vực:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Xuyên Mộc, Bà Rịa Vũng Tàu
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Mức giá:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  -
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Diện tích:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  24 m²
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Hướng:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Đông
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`Storyshots z|c2c/RequestDetailInfoView default 1`] = `
Array [
  <Text
    style={
      Object {
        "display": "none",
      }
    }
    testID="storyConfigId"
  >
    {"isCaptureScrollViewContent":true}
  </Text>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="captureButton"
  >
    <Text>
      Capture
    </Text>
    <Text
      style={
        Object {
          "display": "none",
        }
      }
      testID="captureURL"
    />
  </View>,
  <RCTScrollView
    testID="captureScrollView"
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        <RCTScrollView
          alwaysBounceVertical={false}
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            Array [
              Object {
                "flexGrow": 1,
              },
              Array [
                Object {
                  "flexGrow": 1,
                  "paddingHorizontal": 16,
                },
                Object {},
              ],
            ]
          }
          contentInset={
            Object {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={true}
          enableResetScrollToCoords={false}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          horizontal={false}
          innerRef={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="handled"
          keyboardSpace={0}
          onScroll={[Function]}
          pointerEvents="auto"
          resetKeyboardSpace={[Function]}
          scrollEnabled={true}
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Mã yêu cầu:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                CT-101
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Trạng thái:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {
                      "color": "#333333",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Chuyên viên tư vấn:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                TPL Kim-Consultant-Lead
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 4,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Chuyên viên tư vấn:
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/call/call.png",
                    }
                  }
                  style={
                    Object {
                      "height": 21,
                      "marginRight": 8,
                      "tintColor": "#26894F",
                      "width": 21,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#26894F",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 12,
                      "includeFontPadding": true,
                    }
                  }
                >
                  Gọi điện
                </Text>
              </View>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                nativeID="animatedComponent"
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "flexDirection": "row",
                    "marginLeft": 16,
                    "opacity": 1,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/assets/images/message_fill.png",
                    }
                  }
                  style={
                    Object {
                      "height": 21,
                      "marginRight": 8,
                      "tintColor": "#26894F",
                      "width": 21,
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#26894F",
                      "fontFamily": "Nunito-Bold",
                      "fontSize": 12,
                      "includeFontPadding": true,
                    }
                  }
                >
                  Nhắn tin
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                  },
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#A3A3A3",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                Ngày cập nhật:
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "width": 16,
                    },
                    Object {
                      "width": 16,
                    },
                  ]
                }
              />
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#313131",
                      "fontFamily": "Nunito-Regular",
                      "fontSize": 14,
                      "includeFontPadding": true,
                    },
                    Object {},
                  ]
                }
              >
                20/04/2021 13:53
              </Text>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
            <Text
              style={
                Object {
                  "fontFamily": "Nunito-Bold",
                  "fontSize": 18,
                  "includeFontPadding": true,
                }
              }
            >
              Chi tiết yêu cầu liên hệ
            </Text>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Mã sản phẩm:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  MTD76
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Dự án:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      Object {},
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        Array [
                          Object {
                            "color": "#313131",
                            "fontFamily": "Nunito-Regular",
                            "fontSize": 14,
                            "includeFontPadding": true,
                          },
                          Object {
                            "color": "#26894F",
                            "flex": 1,
                            "fontFamily": "Nunito-Bold",
                            "includeFontPadding": true,
                          },
                        ]
                      }
                    >
                      Richmond City
                    </Text>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "height": 20,
                          "justifyContent": "center",
                          "width": 20,
                        }
                      }
                    >
                      <Image
                        source={
                          Object {
                            "testUri": "../../../src/assets/images/right_arrow.png",
                          }
                        }
                        style={
                          Object {
                            "height": "100%",
                            "width": "100%",
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#A3A3A3",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  Tiểu khu:
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "width": 16,
                      },
                      Object {
                        "width": 16,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#313131",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 14,
                        "includeFontPadding": true,
                      },
                      Object {},
                    ]
                  }
                >
                  ruby
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "height": 16,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#828282",
                        "fontFamily": "Nunito-Regular",
                        "fontSize": 15,
                        "includeFontPadding": true,
                      },
                      Object {
                        "fontSize": 13,
                      },
                    ]
                  }
                >
                  Ghi chú:
                   
                </Text>
              </View>
              <View>
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={false}
                  editable={true}
                  maxLength={128}
                  multiline={true}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  placeholder="Ghi chú thêm"
                  pointerEvents="auto"
                  style={
                    Array [
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "fontFamily": "Nunito-Regular",
                          "fontSize": 14,
                          "includeFontPadding": true,
                          "paddingLeft": 10,
                          "paddingVertical": 10,
                        },
                        Object {
                          "color": "#313131",
                        },
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#E4E4E4",
                          "borderRadius": 8,
                          "borderWidth": 1,
                          "height": 110,
                        },
                      ],
                      undefined,
                      false,
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                }
              }
            />
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>,
]
`;
